--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,63 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow-x: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.blob {
+  max-width: fit-content;
+
+  .circle-red {
+    position: absolute;
+    height: 40%;
+    width: 40%;
+    border-radius: 50%;
+    background: rgba(237, 0, 0, 0.49);
+    filter: blur(100px);
+    top: 0;
+    left: 0;
+    z-index: -99;
+    -webkit-animation: move 10s infinite alternate;
+    animation: move 10s infinite alternate;
+    transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+  }
+
+  .circle-blue {
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    background: rgba(5, 2, 209, 0.654);
+    filter: blur(100px);
+    top: 0;
+    right: 0;
+    z-index: -99;
+    -webkit-animation: move 5s infinite alternate;
+    animation: move 5s infinite alternate;
+    transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+  }
 }
 
+@-webkit-keyframes move {
+  from {
+    transform: translate(-10px, -5px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+
+  to {
+    transform: translate(10px, 10px) rotate(-10deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
+
+@keyframes move {
+  from {
+    transform: translate(-150px, -50px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+
+  to {
+    transform: translate(50px, 100px) rotate(-10deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
