--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,39 @@
 #root {
-  /* max-width: 1280px; */
+  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   overflow-x: hidden;
 }
 
 .blob {
-  max-width: fit-content;
+  /* max-width: 1280px; */
 
   .circle-red {
     position: absolute;
     height: 40%;
     width: 40%;
     border-radius: 50%;
-    background: rgba(237, 0, 0, 0.49);
+    background: rgba(237, 0, 0, 1);
     filter: blur(100px);
-    top: 0;
-    left: 0;
+    /* top: -10;
+    left: -20; */
     z-index: -99;
-    -webkit-animation: move 10s infinite alternate;
-    animation: move 10s infinite alternate;
+    animation: move 7s infinite alternate;
     transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
   }
 
   .circle-blue {
     position: absolute;
-    height: 50%;
-    width: 50%;
+    height: 33%;
+    width: 33%;
     border-radius: 50%;
-    background: rgba(5, 2, 209, 0.654);
+    background: rgba(6, 2, 209, 1);
     filter: blur(100px);
-    top: 0;
-    right: 0;
+    /* top: -10;
+    right: 20; */
     z-index: -99;
-    -webkit-animation: move 5s infinite alternate;
-    animation: move 5s infinite alternate;
+    animation: movee 5s infinite alternate;
     transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    transform: translate(-10px, -5px) rotate(-90deg);
-    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
-  }
-
-  to {
-    transform: translate(10px, 10px) rotate(-10deg);
-    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
   }
 }
 
@@ -60,5 +46,15 @@
   to {
     transform: translate(50px, 100px) rotate(-10deg);
     border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
+@keyframes movee {
+  from {
+    transform: translate(50px, 100px) rotate(-10deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+  to {
+    transform: translate(-150px, -50px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
   }
 }
