--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,20 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  overflow-x: hidden;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .blob {
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+  /* background-color: rgba(0, 255, 255, 0.182); */
   /* max-width: 1280px; */
 
+}
   .circle-red {
     position: absolute;
     height: 40%;
@@ -29,13 +36,12 @@
     border-radius: 50%;
     background: rgba(6, 2, 209, 1);
     filter: blur(100px);
-    /* top: -10;
-    right: 20; */
+    top: -10px;
+    right: 20px;
     z-index: -99;
     animation: movee 5s infinite alternate;
     transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
   }
-}
 
 @keyframes move {
   from {
