--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 
 .blob {
   /* position: absolute; */
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   /* overflow: hidden; */
   /* background-color: rgba(0, 255, 255, 0.182); */
   /* max-width: 1280px; */
